--- a/character/character.html
+++ b/character/character.html
@@ -35,7 +35,7 @@
 						<li><a href="../season/season4.html">Season 4</a></li>
 					</ul>
 					<div class="container">
-						<a href="#!" class="brand-logo"><img class="logo" src="../img/logo.png"></a>
+						<a href="../index.html" class="brand-logo"><img class="logo" src="../img/logo.png"></a>
 						<a href="#" data-activates="mobile-demo" class="button-collapse">
 							<i class="fa fa-bars fa-2x" aria-hidden="true"> <span class="sr-only">menu</span></i>
 						</a>
@@ -84,12 +84,13 @@
 					<a class="carousel-item" href="#nine!"><img src="img/mikael.jpg"></a>
 				</div>
 			</div>
-		</div> <!-- row -->		
+		</div> <!-- row -->
+		<div class="char-container">	
 		<div class="container">
 			<div class="row">
-				<div class="col s12 l6">
+				<div class="col s12">
 					<div class="section darkblue">
-						<h3 class="character"> Main Character</h3>
+						<h3 class="character">Character</h3>
 						<ul class="collapsible" data-collapsible="accordion">
 							<li>
 								<div id="klaus" class="collapsible-header">
@@ -99,7 +100,7 @@
 								<div class="collapsible-body">
 									<div class="col s12 m6 l12">
 										<div class="card-panel deep-purple darken-3">
-											<span class="white-text"> <cite> <p class="char-quote">"A thousand years ago, we three made an eternal vow. To protect each other, always and forever. Freya, that vow now includes you. As it includes my daughter. She is my heart and soul. Right now she's out there, alone in the darkness, fighting. We can't give up. So I'm begging you, all of you." -Klaus </p></cite>
+											<span class="white-text"> <cite> <p class="char-quote">"A thousand years ago, we three made an eternal vow. To protect each other, always and forever. Freya, that vow now includes you. As it includes my daughter. She is my heart and soul. Right now she's out there, alone in the darkness, fighting. We can't give up. So I'm begging you, all of you." -Klaus in <strong>Voodoo Child</strong> </p></cite>
 											</span>
 										</div>
 									</div>
@@ -111,50 +112,83 @@
 									<img class="avatar" src="img/icon/rebekah.png">
 									<span class="avatar-name">Rebekah Mikaelson</span>
 								</div>
-								<div class="collapsible-body"><span class="char-details">Lorem ipsum dolor sit amet.</span>
+								<div class="collapsible-body">
+									<div class="col s12 m6 l12">
+										<div class="card-panel deep-purple darken-3">
+											<span class="white-text"> 
+												<cite> <p class="char-quote"> "Elijah, you know how it feels to be apart. At first, the freedom is exhilarating, and then, one day, inevitably you wake up with that pit in your stomach, that dull, aching feeling of missing the only people that know you. For a thousand years, we have been honoring a vow to stand together. Being forced to separate feels like torture." -Rebekah to Elijah in The <strong>Feast of All Sinners </strong>
+ 												</p></cite>
+											</span>
+										</div>
+									</div>
+									<span class="char-details left-align"> <p class="char-details">Rebekah Mikaelson is the former female protagonist of The Originals, although not being a series regular since Moon Over Bourbon Street. She was a major recurring and guest character in the third, fourth and fifth seasons of The Vampire Diaries. She is the sole female Original Vampire and the second daughter of Mikael and Esther. She is the younger sister of Freya Mikaelson, Finn Mikaelson, Elijah Mikaelson and Kol Mikaelson, the younger half-sister of Niklaus Mikaelson, the elder sister of Henrik Mikaelson, and the aunt of an unnamed, unborn nephew - Freya's son - and Niklaus' daughter with Hayley Marshall, Hope Mikaelson.</p></span>
 								</div>
 							</li>
 							<li>
 								<div class="collapsible-header">
 									<img class="avatar" src="img/icon/elijah.jpeg"> 
 									<span class="avatar-name">Elijah Mikaelson</span>
-									<!-- <div class="played"> by: Leah Pipes</div> -->
 								</div>
-								<div class="collapsible-body"><span class="char-details">Lorem ipsum dolor sit amet.</span>
+								<div class="collapsible-body">
+									<div class="col s12 m6 l12">
+										<div class="card-panel deep-purple darken-3">
+											<span class="white-text"> <cite> <p class="char-quote"> "I'm a danger to my family. ... You see, Marcel, my disease has always been this blind devotion to my brother. A thousand years, whenever he has needed me, I have been there. And no matter what I do, I'm at the complete mercy of that devotion. I can't do that anymore." - Elijah to Marcel in <strong>The Feast of All Sinners</strong></p></cite>
+											</span>
+										</div>
+									</div>
+									<span class="char-details left-align"> <p class="char-details">Elijah Mikaelson is the deuteragonist of The Originals. He was formerly a major recurring character in The Vampire Diaries, serving initially as an antagonist in the second season and eventually becoming a supporting character and protagonist in the third season and fourth seasons. Elijah is an Original Vampire.</p></span>
 								</div>
-							</li>
 							<li>
 								<div class="collapsible-header">
 									<img class="avatar" src="img/icon/kol.jpg"> 
 									<span class="avatar-name">Kol Mikaelson</span>
-									<!-- <div class="played"> by: Leah Pipes</div> -->
 								</div>
-								<div class="collapsible-body"><span class="char-details">Lorem ipsum dolor sit amet.</span>
+								<div class="collapsible-body">
+									<div class="col s12 m6 l12">
+										<div class="card-panel deep-purple darken-3">
+											<span class="white-text"> <cite> <p class="char-quote">"For a thousand years I've never experienced love or peace. Davina changed me. What if it was Camille, what if you could bring her back? Would you not do as I did?" - Kol to Klaus in <strong>A Spirit Here That Won't Be Broken</strong></p></cite>
+											</span>
+										</div>
+									</div>
+									<span class="char-details left-align"> <p class="char-details">Kol Mikaelson is a major recurring character on The Originals. He also had a recurring role in the third, fourth and fifth season of The Vampire Diaries, where he served as an antagonist and anti-hero. Kol is also the main protagonist of the short web series The Originals: The Awakening.</p></span>
 								</div>
 							</li>
 							<li>
 								<div class="collapsible-header">
 									<img class="avatar" src="img/icon/freya.jpg"> 
 									<span class="avatar-name">Freya Mikaelson</span>
-									<!-- <div class="played"> by: Leah Pipes</div> -->
 								</div>
-								<div class="collapsible-body"><span class="char-details">Lorem ipsum dolor sit amet.</span>
+								<div class="collapsible-body">
+									<div class="col s12 m6 l12">
+										<div class="card-panel deep-purple darken-3">
+											<span class="white-text"> <cite> <p class="char-quote">"My family's about to be pulled apart and there's literally nothing I can do about it. I'm supposed to be the big sister that could fix everything..." -Freya in <strong>The Feast of All Sinners</strong></p></cite>
+											</span>
+										</div>
+									</div>
+									<span class="char-details left-align"> <p class="char-details">Freya Mikaelson is a powerful witch and also a main character on The Originals. Introduced as a recurring character in the second season, she is the firstborn child of Mikael and Esther, the elder sister of Finn, Elijah, Kol, Rebekah and Henrik, the maternal older half-sister of Niklaus Mikaelson and the paternal aunt of Hope Mikaelson.</p></span>
 								</div>
 							</li>
 							<li>
 								<div class="collapsible-header">
 									<img class="avatar" id="hayley" src="img/icon/hayley.jpg"> 
 									<span class="avatar-name">Hayley Marshall-Kenner</span>
-									<!-- <div class="played"> by: Leah Pipes</div> -->
 								</div>
-								<div class="collapsible-body"><span class="char-details">Lorem ipsum dolor sit amet.</span>
+								<div class="collapsible-body">
+									<div class="col s12 m6 l12">
+										<div class="card-panel deep-purple darken-3">
+											<span class="white-text"> <cite> <p class="char-quote">"Jack. I didn't get to say this before, so I need to say it now. You were what I should have wanted, you were right. But I can never manage to give up Elijah, I couldn't walk away. I met him at a time in my life when I was scared, alone, I know that's messed up. I guess I never really saw what love was supposed to look like. But I don't want that for Hope. I wish she knew you. I wish a lot of things. As for Elijah, I know what he is - I guess I always knew, but I loved him despite it. Or maybe because of it. The truth is, I'm a monster too. We've all done terrible things, Jack - except for Hope. She's innocent. Pure. And I wanna make sure she stays that way. I know what I have to do - I just have to be brave enough to do it." -Hayley to Jackson in <strong>A Spirit Here That Won't Be Broken</strong></p></cite>
+											</span>
+										</div>
+									</div>
+									<span class="char-details left-align"> <p class="char-details">Hayley Marshall-Kenner (born Andrea Labonair) is a main character of The Originals. She was first introduced in The Vampire Diaries as a werewolf who later on became a hybrid in The Originals. She was described as "gorgeous, but tough as nails and also very protective".</p></span>
 								</div>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
-		</div>	
+		</div>
+	</div> <!-- /char container -->
 		<!-- Footer -->
 		<div class="col s12">	
 			<footer class="page-footer">
